# web-pages-parser

./: CMakeLists.txt  HTTPDownloader.cpp  HTTPDownloader.hpp  README.md  Relatorio - Projeto2 SuperComp.ipynb  amazon.cpp  crawlerParalelo.cpp  crawlerSequencial.cpp  main.cpp  out.txt  page.txt
.ipynb_checkpoints/: Relatorio - Projeto2 SuperComp-checkpoint.ipynb
Relatório/: Relatorio - Projeto2 SuperComp.ipynb
Relatório/: Relatorio - Projeto2 SuperComp.ipynb
